# EncHF_Dataset

./: .gitignore  MakeSidecars.ipynb  README.md  pyproject.toml
old/: README.md  pyproject.toml
paramproducers/: README_paramproducers.md  const.py  from_audio.py  from_filename.py  lin.py
random/: SPEC.md
workflow/: __init__.py  s1_audio_normalize.py  s2_wav2encodec24.py  s3_sidecar_init.py  s4_sidecar_add.py  s5_build_dataset_from_folder.py  sidecar_audit.py  sidecar_lib.py  torch_reference.py  writeParamArrays.py
