[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "enc-hf-workflow"
version = "0.1.0"
description = "Workflow + tools for Encodec token datasets with per-frame conditioning (ESF): normalize, encode, init/add sidecars, audit, build, inspect."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Your Name"}]
keywords = ["audio", "encodec", "conditioning", "dataset", "huggingface", "pytorch"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "numpy>=1.22",
  "tqdm>=4.66",
  "datasets>=2.14",
  "torch>=2.1",
  "transformers>=4.40",
  "accelerate>=0.30",
  "ipympl>=0.9",
  "matplotlib>=3.5",
  "librosa",
  "soundfile",
  "sounddevice"
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.5", "mypy>=1.5"]

[project.urls]
Homepage = "https://github.com/your-org/EncHF_Dataset"
Issues = "https://github.com/your-org/EncHF_Dataset/issues"

[tool.hatch.build.targets.wheel]
packages = ["workflow", "paramproducers"]

[tool.hatch.build.targets.sdist]
include = [
  "workflow",
  "paramproducers",
  "README.md",
  "SPEC.md",
  "LICENSE",
  "pyproject.toml",
]

[project.scripts]
# Numbered steps (directly importable now that they begin with 's')
wf-audio-normalize = "workflow.s1_audio_normalize:main"
wf-wav2encodec24   = "workflow.s2_wav2encodec24:main"

# Sidecar & dataset tools
wf-sidecar-init    = "workflow.s3_sidecar_init:main"
wf-sidecar-add     = "workflow.s4_sidecar_add:main"
wf-build-dataset   = "workflow.s5_build_dataset_from_folder:main"
wf-sidecar-audit   = "workflow.sidecar_audit:main"
wf-inspect         = "workflow.torch_reference:main"

# Back-compat aliases (optional; remove if you prefer only 'wf-*')
encodec-sidecar-init   = "workflow.s3_sidecar_init:main"
encodec-sidecar-add    = "workflow.s4_sidecar_add:main"
encodec-build-dataset  = "workflow.s5_build_dataset_from_folder:main"
encodec-sidecar-audit  = "workflow.sidecar_audit:main"
encodec-sidecar-inspect= "workflow.torch_reference:main"